--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/Products.jsx", "components/Products.jsx", "pages/index.jsx", "pages/index.jsx", "components/Wrapper.jsx", "pages/shoe/[id].jsx"],
   "exclude": ["node_modules"]
 }
